--- a/MyMovies/Views/Movies/Create.cshtml
+++ b/MyMovies/Views/Movies/Create.cshtml
@@ -11,26 +11,33 @@
 <p>New Movie</p>
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Recipes" asp-action="Create" method="post">
+        <form asp-controller="Movies" asp-action="Create" method="post">
+            @*<div asp-validation-summary="All" class="valid"></div>*@
             <div class="form-group">
                 <label asp-for="Title" class="control-label">Title</label>
                 <input asp-for="Title" class="form-control" />
+                <span asp-validation-for="Title" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Description" class="control-label">Description</label>
                 <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ImageUrl" class="control-label">Image URL</label>
                 <input asp-for="ImageUrl" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Genre" class="control-label">Genre</label>
-                <input asp-for="Genre" class="form-control" />
+                <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
             <div>
                 <label asp-for="Cast" class="control-label">Cast</label>
                 <textarea asp-for="Cast" class="form-control"></textarea>
+                <span asp-validation-for="Cast" class="text-danger"></span>
+
+            </div>
+            <div class="form-group">
+                <label asp-for="Genre" class="control-label">Genre</label>
+                <input asp-for="Genre" class="form-control" />
+                <span asp-validation-for="Genre" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
