--- a/MyMovies/Views/Movies/Overview.cshtml
+++ b/MyMovies/Views/Movies/Overview.cshtml
@@ -1,12 +1,23 @@
 ﻿@model List<MyMovies.Models.Movie>;
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
 @{ 
     Layout = "_Layout";
     ViewBag.Title = "Home";
 }
 
-
+<div class="row">
+    <form asp-controller="Movies" asp-action="Overview">
+        <div class="form-group">
+            <input name="Title" value="" id="title" class="form-control" placeholder="Search" />
+            <div class="form-group">
+                <input type="submit" value="Search" class="btn btn-primary" />
+            </div>
+        </div>
+    </form>
+</div>
     
-    <div class="container" style="margin-top:20px">
+ <div class="container" style="margin-top:20px">
         <div class="row">
             @foreach (var movie in @Model)
             {
@@ -16,11 +27,11 @@
                         <div class="card-body">
                             <h5 class="card-title">@movie.Title</h5>
                             <p class="card-text">@movie.Description.</p>
-                            <a href="/Movies/Details/@movie.Id" class="btn btn-primary">Go somewhere</a>
+                            <a asp-controller="Movies" asp-action="Details" asp-route-id="@movie.Id" class="btn btn-primary">Go somewhere</a>
                         </div>
                     </div>
                 </div>
             }
         </div>
-    </div>
+ </div>
     
