--- a/MyMovies/Views/Shared/_Layout.cshtml
+++ b/MyMovies/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
             </ul>
         </div>
     </nav>
-    <div>
+    <div class="container" style="margin-top:10px">
         @RenderBody()
     </div>
 </body>
