--- a/MyMovies/Views/Movies/Overview.cshtml
+++ b/MyMovies/Views/Movies/Overview.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="row">
-    <form asp-controller="Movies" asp-action="Overview">
+    <form asp-controller="Movies" asp-action="Overview" class="form-inline">
         <div class="form-group">
             <input name="Title" value="" id="title" class="form-control" placeholder="Search" />
             <input type="submit" value="Search" class="btn btn-primary" />
