--- a/MyMovies/Views/Movies/Create.cshtml
+++ b/MyMovies/Views/Movies/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyMovies.Data.Movie;
+﻿@model MyMovies.ViewModels.MovieCreateModel;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
