--- a/MyMovies/Views/Movies/Modify.cshtml
+++ b/MyMovies/Views/Movies/Modify.cshtml
@@ -1,8 +1,8 @@
-﻿@model MyMovies.Data.Movie
+﻿@model MyMovies.ViewModels.MovieModifyModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
-    ViewData["Title"] = "Modify";
+    ViewBag.Title = "Modify";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -12,8 +12,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Modify" method="post">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-controller="Movies" asp-action="Modify" method="post">
+            @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -49,8 +49,8 @@
     </div>
 </div>
 
-<div>
-    <a asp-action="Overview">Back to List</a>
+<div style="margin-bottom: 20px">
+    <a asp-controller="Movies" asp-action="ModifyOverview">Back to List</a>
 </div>
 
 @*@section Scripts {
