--- a/MyMovies/Views/Movies/ModifyOverview.cshtml
+++ b/MyMovies/Views/Movies/ModifyOverview.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyMovies.Data.Movie>
+﻿@model  List<MyMovies.ViewModels.ModifyOverviewModel>
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
@@ -20,8 +20,8 @@
         {
             <tr>
                 <td>@movie.Title</td>
-                <td><a asp-controller="Movies" asp-action="Modify" asp-route-id="@movie.Id" class="btn btn-primary">Modify</a>
-                  | <a asp-controller="Movies" asp-action="Delete" asp-route-id="@movie.Id" class="btn btn-danger">Delete</a></td>
+                <td><a asp-controller="Movies" asp-action="Modify" asp-route-id="@movie.Id">Modify</a>
+                  | <a asp-controller="Movies" asp-action="Delete" asp-route-id="@movie.Id" onclick="confirm('Do you want to delete this movie?')">Delete</a></td>
             </tr>
         }
 
