--- a/MyMovies/Views/Movies/Overview.cshtml
+++ b/MyMovies/Views/Movies/Overview.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyMovies.Data.Movie>;
+﻿@model List<MyMovies.ViewModels.MovieOverviewModel>;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{ 
@@ -14,7 +14,12 @@
         </div>
     </form>
 </div>
-    
+ 
+@if (@Model.Count == 0)
+{
+    <p>No results found</p>
+}
+
  <div class="container" style="margin-top:20px">
         <div class="row">
             @foreach (var movie in @Model)
