--- a/MyMovies/Views/Shared/_Layout.cshtml
+++ b/MyMovies/Views/Shared/_Layout.cshtml
@@ -10,7 +10,6 @@
 
 
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -35,22 +34,26 @@
                 <li class="nav-item @contactIsActive">
                     <a class="nav-link" asp-controller="Info" asp-action="ContactUs">Contact Us</a>
                 </li>
-                <li class="nav-item @modifyIsActive">
-                    <a class="nav-link" asp-controller="Movies" asp-action="ModifyOverview">Modify Movies</a>
-                </li>
+
                 @if (User.Identity.IsAuthenticated)
                 {
+                    <li class="nav-item @modifyIsActive">
+                        <a class="nav-link" asp-controller="Movies" asp-action="ModifyOverview">Modify Movies</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/">@User.Identity.Name</a>
                     </li>
-                    <li>
-                        <a class="nav-link" href="/">Sign Out</a>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Auth" asp-action="SignOut">Sign Out</a>
                     </li>
                 }
                 else
                 {
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Auth" asp-action="SignIn">Sign In</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" asp-controller="Auth" asp-action="SignUp">Sign Up</a>
                     </li>
                 }
 
