--- a/MyMovies/Views/Movies/Overview.cshtml
+++ b/MyMovies/Views/Movies/Overview.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<MyMovies.ViewModels.MovieOverviewModel>;
+﻿@model MyMovies.ViewModels.MovieOverviewDataModel;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{ 
@@ -15,26 +15,33 @@
     </form>
 </div>
  
-@if (@Model.Count == 0)
+@if (@Model.Movies.Count == 0)
 {
     <p>No results found</p>
 }
 
- <div class="container" style="margin-top:20px">
+<div class="row">
+    <div class="col-md-9">
         <div class="row">
-            @foreach (var movie in @Model)
+            @foreach (var movie in @Model.Movies)
             {
-                <div class="col-md-4">
-                    <div class="card">
-                        <img src="@movie.ImageUrl" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">@movie.Title</h5>
-                            <p class="card-text">@movie.Description.</p>
-                            <a asp-controller="Movies" asp-action="Details" asp-route-id="@movie.Id" class="btn btn-primary">Go somewhere</a>
-                        </div>
+            <div class="col-md-4">
+                <div class="card">
+                    <img src="@movie.ImageUrl" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">@movie.Title</h5>
+                        <p class="card-text">@movie.Description.</p>
+                        <a asp-controller="Movies" asp-action="Details" asp-route-id="@movie.Id" class="btn btn-primary">Go</a>
                     </div>
                 </div>
+            </div>
             }
         </div>
- </div>
-    
+    </div>
+    <div class="col-md-3">
+        <partial name="SidebarPartial" for="SiedbarData" />
+    </div>
+</div>
+ 
+            
+   
