--- a/MyMovies/Views/Movies/Details.cshtml
+++ b/MyMovies/Views/Movies/Details.cshtml
@@ -4,6 +4,10 @@
 @{
     Layout = "_Layout";
 }
+@section styles{
+    <link href="~/css/Details/details.css" rel="stylesheet" />
+
+}
 
 
 <div class="row">
@@ -13,10 +17,10 @@
         <p style="text-align:center">@Model.Description</p>
 
         <h2>Genres:</h2>
-        <p>@Model.Cast</p>
+        <p>@Model.Genre</p>
 
         <h2>Cast:</h2>
-        <p>@Model.Genre</p>
+        <p>@Model.Cast</p>
 
         <h2>Date Created:</h2>
         <p>@Model.DateCreated</p>
@@ -26,14 +30,15 @@
 
         @if (User.Identity.IsAuthenticated)
         {
-            <form asp-controller="MovieComments" asp-action="Add" method="post">
-                <input id="movieId" name="movieId" value="@Model" hidden />
+            <form asp-controller="MovieComments" asp-action="Add" method="post" onsubmit="return ValidateComment()">
+                <input id="movieId" name="movieId" value="@Model.Id" hidden />
                 <div class="form-group">
                     <label for="comment" class="control-label">Comment</label>
                     <textarea id="comment" name="comment" class="form-control"></textarea>
                 </div>
+                    <button type="submit"  class="btn btn-primary" >Comment</button>
+
             </form>
-            <input type="submit" value="Create" class="btn btn-primary" />
 
         }
 
@@ -45,8 +50,21 @@
         </div>
     </div>
     <div class="col-md-3">
-            <partial name="SidebarPartial" for="SidebarData" />
-    </div>    
+        <partial name="SidebarPartial" for="SidebarData" />
+    </div>
 </div>
+@section Scripts{
+    <script>
+        function ValidateComment() {
+            var comment = document.getElementById("comment").value;
 
-
+            if (comment == null || comment == " ") {
+                alert("Please enter comment");
+                return false;
+            }
+            else {
+                return true;
+            }
+        }
+    </script>
+}
