--- a/MyMovies/Views/Shared/_Layout.cshtml
+++ b/MyMovies/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     var aboutIsActive = ViewBag.Title == "About Us" ? "active" : "";
     var contactIsActive = ViewBag.Title == "Contact Us" ? "active" : "";
     var modifyIsActive = ViewBag.Title == "Modify Overview" ? "active" : "";
+    var modifyUsersActive = ViewBag.Title == "Modify Users Overview" ? "active" : "";
 }
 
 
@@ -15,6 +16,8 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="~/lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
+    
+    @RenderSection("Styles", required:false)
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -42,6 +45,9 @@
                         <li class="nav-item @modifyIsActive">
                             <a class="nav-link" asp-controller="Movies" asp-action="ModifyOverview">Modify movies</a>
                         </li>
+                        <li class="nav-item @modifyUsersActive">
+                            <a class="nav-link" asp-controller="Users" asp-action="ModifyUserOverview">Modify users</a>
+                        </li>
                     }
                     
                     <li class="nav-item">
@@ -67,5 +73,6 @@
     <div class="container" style="margin-top:10px">
         @RenderBody()
     </div>
+    @RenderSection("Scripts", required: false);
 </body>
 </html>
